# AiCovergen

./: README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-publish.yml
AiCovergen/: AICoverGen_colab.ipynb  README.md  __init__.py  no_ui.py  tes.py
AiCovergen/mdxnet_models/: model_data.json
AiCovergen/rvc_models/: MODELS.txt  public_models.json
AiCovergen/src/: __init__.py  __main__.py  download_models.py  main.py  mdx.py  rmvpe.py  rvc.py  trainset_preprocess_pipeline_print.py  vc_infer_pipeline.py  webui.py
